styling for home page and questions, added first question to alternate html

--- a/question1.html
+++ b/question1.html
@@ -17,13 +17,18 @@
         </div>
     </header>
 
-    <div class = "startquiz">
-        <h1>Coding Quiz Challenge</h1>
-        <p>Try to answer the following code-related questions within the time limit.
-        </br>Keep in mind the incorrect answers will penalize your score/time by ten seconds!
-        </p>
+    <div class = "questions">
+        <h1>A very useful tool used during development and debugging for printing content to the debugger is:</h1>
+        <ol class="listEl">
+            <li>JavaScript</li>
+            <li>terminal/Bash</li>
+            <li>for loops</li>
+            <li>console.log</li>
+
+        </ol>
+        <!-- each list needs to be a button link for Javascript not a next button-->
         <form action="./question1.html">
-            <input class="next-btn" type="submit" value="Start here"/>
+            <input class="next-btn" type="submit" value="Next Question"/>
         </form>
     </div>
 
