--- a/question2.html
+++ b/question2.html
@@ -18,16 +18,16 @@
     </header>
 
     <div class = "questions">
-        <h1>A very useful tool used during development and debugging for printing content to the debugger is:</h1>
+        <h1>questions:</h1>
         <ol class="listEl">
-            <li>JavaScript</li>
+            <li>Correct</li>
             <li>terminal/Bash</li>
             <li>for loops</li>
             <li>console.log</li>
 
         </ol>
         <!-- each list needs to be a button link for Javascript not a next button-->
-        <form action ="./question2.html">
+        <form action =".">
             <input class="next-btn" type="submit" value="Next Question"/>
         </form>
     </div>
