added pseduo code for JS file and create folders to seperate css and js

--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 
 <body>
     <header class = "highscore">
         <!--this button could just be a link to external page by using css!-->
         <button class="highscore-btn">View High Scores</button>
-        <div>
-            Time: 
-        </div>
+        <div id = "countEl"> Time: </div>
     </header>
 
     <div class = "startquiz">
@@ -30,6 +28,6 @@
     
 
 
-    <script src ="./assets/script.js"></script>
+    <script src ="./assets/JS/script.js"></script>
 </body>
 </html>
