--- a/question2.html
+++ b/question2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 
 <body>
@@ -35,6 +35,6 @@
     
 
 
-    <script src ="./assets/script.js"></script>
+    <script src ="./assets/JS/script.js"></script>
 </body>
 </html>
