changed question 1 html to scores

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header class = "highscore">
         <!--this button could just be a link to external page by using css!-->
         <button class="highscore-btn">View High Scores</button>
-        <div id = "countEl"> Time: </div>
+        <section class="timer">
+            <div id = "time-text"> Time:</div>
+            <div id ="time-sec"></div>
+        </section>  
     </header>
 
     <div class = "startquiz">
