--- a/question1.html
+++ b/question1.html
@@ -9,26 +9,17 @@
 </head>
 
 <body>
-    <header class = "highscore">
-        <!--this button could just be a link to external page by using css!-->
-        <button class="highscore-btn">View High Scores</button>
-        <div>
-            Time: 
-        </div>
-    </header>
 
-    <div class = "questions">
-        <h1>A very useful tool used during development and debugging for printing content to the debugger is:</h1>
-        <ol class="listEl">
-            <li>JavaScript</li>
-            <li>terminal/Bash</li>
-            <li>for loops</li>
-            <li>console.log</li>
-
+    <div>
+        <h1>Scores:</h1>
+        <ol>
+            getitem??? the set item wil be from local storage activity!
         </ol>
+        
+    </div>
         <!-- each list needs to be a button link for Javascript not a next button-->
-        <form action ="./question2.html">
-            <input class="next-btn" type="submit" value="Next Question"/>
+        <form action ="./index.html">
+            <input class="next-btn" type="submit" value="Try again!"/>
         </form>
     </div>
 
