removed message from html and placed it in javascript

--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
         </section>  
     </header>
 
-    <div class = "instruction">
-        <h1>Coding Quiz Challenge</h1>
-        <p>Try to answer the following code-related questions within the time limit.
-        </br>Keep in mind the incorrect answers will penalize your score/time by ten seconds!
-        </p>
+    <div>
+        <input type='text' id = 'instruction' value="">
         <div>
             <button class="startquiz">Start Here!</button>
         </div>
