timer starting after button is clicked

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div>
         <input type='text' id = 'instruction' value="">
         <div>
-            <button class="startquiz">Start Here!</button>
+            <button class="startquiz"></button>
+                
         </div>
     </div>
 
