displayed instructions through javascript

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
     </header>
 
     <div>
-        <input type='text' id = 'instruction' value="">
-        <div>
-            
-        </div>
+        <h1 id = 'information'></h1>
+
     </div>
 
     
