added text to list items

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div>
         <h1 id = 'information'></h1>
         <p id = 'more-info'></p>
+        <div id ='choices'></div>
 
 
     </div>
