set up first question with a function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class = "highscore">
+    <header id = "header">
         <!--this button could just be a link to external page by using css!-->
         <a href= "./question1.html" class="highscore-link">View High Scores</a>
         <section class="timer">
@@ -20,9 +20,11 @@
     </header>
 
     <div>
-        <h1 id = 'information'></h1>
-        <p id = 'more-info'></p>
+        <div id = 'question'></div>
+        <div id = 'question-container' class = 'hide'></div>
+        <div id = 'answer-buttons' class ='btn-style'></div>
         <div id ='choices'></div>
+        <div id = 'results'></div>
 
 
     </div>
