display answers but lost instructions

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
     <div>
         <div id = 'question'></div>
         <div id = 'question-container' class = 'hide'></div>
-        <div id = 'answer-buttons' class ='btn-style'></div>
-        <div id ='choices'></div>
+        <div id = 'answer-buttons' class ='btn-style'>
+            <button class = 'btn'>1</button>
+            <button class = 'btn'>2</button>
+            <button class = 'btn'>3</button>
+            <button class = 'btn'>4</button>
+
+        </div>
         <div id = 'results'></div>
 
 
