--- a/question1.html
+++ b/question1.html
@@ -12,11 +12,10 @@
 
     <div>
         <h1>Scores:</h1>
-        <ol>
-            getitem??? the set item wil be from local storage activity!
-        </ol>
-        
-    </div>
+        <form>
+            <label for = 'initals'>Initials</label>
+            <input type="text" name = "initials" id = "initials-input" placeholder="Type initials here">
+            </form>
         <!-- each list needs to be a button link for Javascript not a next button-->
         <form action ="./index.html">
             <input class="next-btn" type="submit" value="Try again!"/>
