set up time left to go to a new page

--- a/question1.html
+++ b/question1.html
@@ -12,13 +12,15 @@
 
     <div>
         <h1>Scores:</h1>
+        <div id="your-score"></div>
         <form>
-            <label for = 'initals'>Initials</label>
+            <label for = 'initals'>Your Score:</label>
             <input type="text" name = "initials" id = "initials-input" placeholder="Type initials here">
-            </form>
+            <button id = "log-score-btn">Submit</button>   
+        </form>
         <!-- each list needs to be a button link for Javascript not a next button-->
         <form action ="./index.html">
-            <input class="next-btn" type="submit" value="Try again!"/>
+            <input class="try-again-btn" type="submit" value="Try again!"/>
         </form>
     </div>
 
