--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <div>
         <div id = 'question'></div>
+        <div id = 'directions'></div>
+        <button id = 'start-button'>Start Quiz</button>
         <div id = 'question-container' class = 'hide'></div>
         <div id = 'answer-buttons' class ='btn-style'>
             <button class = 'btn'>1</button>
