made a seperate page for start button due to many conflicts

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
 <body>
     <header id = "header">
         <!--this button could just be a link to external page by using css!-->
-        <a href= "./question1.html" class="highscore-link">View High Scores</a>
+        <a href= "./scores.html" class="highscore-link">View High Scores</a>
         <section class="timer">
             <div id = "time-text"> Time:</div>
             <div id ="time-sec"></div>
@@ -21,9 +21,7 @@
 
     <div>
         <div id = 'question'></div>
-        <div id = 'quiz-info'></div>
-        <div id = 'directions'></div>
-        <button id = 'start-button'>Start Quiz</button>
+        
         
       <div class ="listEl">
 
