fixed button for answers

--- a/game.html
+++ b/game.html
@@ -25,19 +25,19 @@
         
       <div class ="listEl">
 
-        <div id = 'choice-container' class ='btn-style'>
+        <div class = 'choice-container' class ='btn-style'>
             <p class = "choice-prefix">A</p>
              <p class = 'choice-text' data-number = '1'>Choice1</p>
          </div>
-        <div id = 'choice-container' class ='btn-style'>
+        <div class = 'choice-container' class ='btn-style'>
             <p class = "choice-prefix">B</p>
              <p class = 'choice-text' data-number = '2'>Choice2</p>
          </div>
-         <div id = 'choice-container' class ='btn-style'>
+         <div class = 'choice-container' class ='btn-style'>
             <p class = "choice-prefix">C</p>
              <p class = 'choice-text' data-number = '3'>Choice3</p>
          </div>
-         <div id = 'choice-container' class ='btn-style'>
+         <div class = 'choice-container' class ='btn-style'>
             <p class = "choice-prefix">D</p>
              <p class = 'choice-text' data-number = '4'>Choice4</p>
          </div>
