final page displays local storage

--- a/scores.html
+++ b/scores.html
@@ -16,7 +16,7 @@
         <div class ="finalScore">Your Score:</div>
         <div id ='yourScore'></div>
         
-        <ul id = "highScoresList"></ul>
+        <div id="usersScore"></div>
         </div>
     </div>
 
